# fonticon-materialdesignicons5

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  bundle.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
fonticon_mdi5/: __init__.py  mdi5.py
fonticon_mdi6/: __init__.py  _iconfont.py  mdi6.py
fonticon_mdi6/_tests/: test_font.py
scripts/: bundle.py
src/fonticon_mdi6/: __init__.py  _iconfont.py  mdi6.py
tests/: test_font.py  test_fonts.py
