# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "fonticon-materialdesignicons6"
dynamic = ["version"]
description = "Material Design Icons extension for superqt font icons"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# add your package dependencies here
dependencies = []

[tool.hatch.version]
path = "src/fonticon_mdi6/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fonticon_mdi6"]

# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest", "pytest-qt", "pytest-cov", "superqt"]
dev = ["black", "ipython", "mypy", "pdbpp", "rich", "ruff"]

[project.urls]
homepage = "https://github.com/pyapp-kit/fonticon-materialdesignicons6"
repository = "https://github.com/pyapp-kit/fonticon-materialdesignicons6"

[project.entry-points."superqt.fonticon"]
mdi6 = "fonticon_mdi6:MDI6"

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py37"
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = ["error:::fonticon_mdi6"]

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    ".ruff_cache/**/*",
    "setup.py",
    "tests/**/*",
]
