
[metadata]
name = fonticon-materialdesignicons5
url = https://github.com/tlambert03/fonticon-materialdesignicons5
author = Talley Lambert
author_email = talley.lambert@gmail.com
description = Material Design Icons extension for superqt font icons
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
version = 5.9.55
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/tlambert03/fonticon-materialdesignicons5

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.otf, *.ttf

[options.entry_points]
superqt.fonticon =
    mdi5 = fonticon_mdi5:MDI5

[options.extras_require]
testing =
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = fonticon_mdi5
