
[metadata]
name = fonticon-materialdesignicons6
url = https://github.com/tlambert03/fonticon-materialdesignicons6
author = Talley Lambert
author_email = talley.lambert@gmail.com
description = Material Design Icons extension for superqt font icons
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
version = attr: fonticon_mdi6.__version__
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
project_urls =
    Source Code =https://github.com/tlambert03/fonticon-materialdesignicons6

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *.otf, *.ttf

[options.entry_points]
superqt.fonticon =
    mdi6 = fonticon_mdi6:MDI6

[options.extras_require]
testing =
    pytest
    superqt
    pytest-qt

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = fonticon_mdi6
